<resources>
    <string name="app_name">MyNews</string>
    <string name="search_activity_name">Search Articles</string>
    <string name="tab_text_1">Top Stories</string>
    <string name="tab_text_2">Most Popular</string>
    <string name="tab_text_3">Business</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="top_stories">Top Stories</string>
    <string name="most_popular">Most Popular</string>
    <string name="interests">Interests</string>
    <string name="more_vert">more settings</string>
    <string name="search_input">Search query term…</string>
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="voluntary_search_field_one">Technology</string>
    <string name="voluntary_search_field_two">Business</string>
    <string name="voluntary_search_field_three">Environment</string>
    <string name="voluntary_search_field_four">Movies</string>
    <string name="voluntary_search_field_five">Politics</string>
    <string name="voluntary_search_field_six">Classifieds</string>
    <string name="search_button_text">Search</string>
    <string name="search_field_hint">Search in articles…</string>
    <string name="channel_name">Search notification</string>
    <string name="channel_description">Provides daily news updates</string>
    <string name="date_format_to_show">%1$d/%2$d/%3$d</string>
</resources>
