<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="always" />
    <item
        android:id="@+id/destination_notifications"
        android:title="Notifications" />
    <item
        android:id="@+id/destination_help"
        android:title="Help" />
    <item
        android:id="@+id/destination_about"
        android:title="About" />
</menu>